--- a/app/views/web/accounts/_skill_fields.html.haml
+++ b/app/views/web/accounts/_skill_fields.html.haml
@@ -2,6 +2,6 @@
   .close.mr280
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   = f.association :dict, :label => false
-  = f.input :level, :collection => Member::Skill::LEVELS
+  = f.input :level, :collection => level_collection
   = f.input :duration
   = f.input :description, :as => :text_desc
